--- a/index.html
+++ b/index.html
@@ -5,15 +5,38 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meme-Scroller</title>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-QMJWJD7JSJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-QMJWJD7JSJ');
+</script>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Outfit" rel="stylesheet">
+	<style>
+		/* latin */
+		@font-face {
+			font-family: 'Outfit';
+			font-style: normal;
+			font-weight: 400;
+			src: url("outfit.woff2") format('woff2');
+			unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, 		U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+		}
+	</style>
   <script src="app.js" defer></script>
 </head>
 <body>
+  <!--COokies popUp-->
+  <div class="cookies">
+    <a class="CookieTitle">Cookies</a>
+    <a class="CookieContent"> We use google analytics to provide a better user experiance.(aka see how many people look at are page). This means some of your data is tracked </a>
+    <button onclick="cookieButton()" class="CookieButton">ACCEPT</button>
+  </div>
   <!--Navbar-->
   <div class = "navbar">
-    <a class = "navbarelem" href="#test">About</a>
-    <a class = "navbarelem" href="#test">GitHub</a>
+    <a class = "navbarelem" href="about.html">About</a>
+    <a class = "navbarelem" href="https://github.com/haraldderbeistehende/infinitememes">GitHub</a>
+	<a class = "navbarelem" href="https://randomprojects.cf/">Home</a>
  </div>
  <!--Content-->
   <div class = "content" id = "content">
